# MOSS-TTS-APP

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  README_zh.md  example.py  pyproject.toml
clis/: __init__.py  moss_tts_app.py  moss_tts_cli.py
docs/: moss_sound_effect_model_card.md  moss_tts_model_card.md  moss_tts_realtime_model_card.md  moss_ttsd_model_card.md  moss_voice_generator_model_card.md
moss_tts_delay/: README.md  configuration_moss_tts.py  inference_utils.py  modeling_moss_tts.py  processing_moss_tts.py
moss_tts_local/: README.md  configuration_moss_tts.py  inference_utils.py  modeling_moss_tts.py  processing_moss_tts.py
moss_tts_realtime/: README.md  app.py  example_llm_stream_to_tts.py  example_multiturn_stream_to_tts.py  infer.py  inferencer.py  requirements.txt
moss_tts_realtime/mossttsrealtime/: __init__.py  configuration_mossttsrealtime.py  modeling_mossttsrealtime.py  modeling_mossttsrealtime_local.py  processing_mossttsrealtime.py  streaming_mossttsrealtime.py
