[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moss-tts"
version = "0.1.0"
description = "MOSS-TTS dependencies and utilities"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenMOSS Team" }]
dependencies = [
  "torch==2.9.1+cu128; sys_platform == 'linux' or sys_platform == 'win32'",
  "torch==2.9.1+cpu; sys_platform != 'linux' and sys_platform != 'win32'",
  "torchaudio==2.9.1+cu128; sys_platform == 'linux' or sys_platform == 'win32'",
  "torchaudio==2.9.1+cpu; sys_platform != 'linux' and sys_platform != 'win32'",
  "torchcodec===0.8.1",
  "transformers==5.0.0",
  "safetensors==0.6.2",
  "numpy==2.1.0",
  "orjson==3.11.4",
  "tqdm==4.67.1",
  "PyYAML==6.0.3",
  "einops==0.8.1",
  "scipy==1.16.2",
  "librosa==0.11.0",
  "tiktoken==0.12.0",
  "psutil",
  "packaging",
  "ninja",
  "setuptools",
  "wheel",
  "gradio"
]

[project.optional-dependencies]
flash-attn = ["flash-attn"]

[project.urls]
Homepage = "https://github.com/OpenMOSS-Team/MOSS-TTS"
Repository = "https://github.com/OpenMOSS-Team/MOSS-TTS"

# PyTorch wheels: CUDA 12.8 on Linux/Windows, CPU on macOS (no CUDA builds)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]

[project.scripts]
moss-tts-cli = "clis.moss_tts_cli:main"
moss-tts-app = "clis.moss_tts_app:main"

[tool.setuptools]
py-modules = []
packages = ["clis"]
